Tools/KubeScore/score/testdata/pod-probes-on-different-containers.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-test-1
  labels:
    app: test
spec:
  containers:
  - name: foobar
    image: foo/bar:latest
    readinessProbe:
      httpGet:
        path: /ready
        port: 8080
    livenessProbe:
      httpGet:
        path: /live
        port: 8080
  - name: foobar2
    image: foo/bar:latest

---
kind: Service
apiVersion: v1
metadata:
  name: my-service
spec:
  selector:
    app: test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
