Tools/KubeScore/score/testdata/service-target-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-test-1
spec:
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: foobar
        image: foo/bar:123
  replicas: 2
  strategy:
    type: RollingUpdate
---
kind: Service
apiVersion: v1
metadata:
  name: my-service
spec:
  selector:
    app: my-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
