Tools/KubeScore/score/testdata/statefulset-test-resources.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: statefulset-test-1
spec:
  selector:
    matchLabels:
      app: foo
  template:
    spec:
      containers:
      - name: foobar
        image: foo/bar:123
        resources:
          limits:
            cpu: 200m
            memory: 1Gi
